--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -31,7 +31,7 @@
     position: relative;
     display: block;
     margin: auto;
-    background-color: #47565A;
+    background-color: #F88F97;
     box-shadow: 0 19px 38px rgba(0, 0, 0, 0.30), 0 15px 12px rgba(0, 0, 0, 0.22);
     border-radius: 5px;
 }
@@ -41,7 +41,7 @@
 }
 
 .column {
-    border: 1px solid rgba(97, 131, 138, .1);
+    border: 1px solid rgba(43, 95, 105, 0.1);
     width: 24px;
     height: 24px;
     display: inline-block;
@@ -50,7 +50,7 @@
 .start-button {
     padding: 15px;
     text-align: center;
-    background-color: #47565A;
+    background-color: #F88F97;
     color: white;
     border-radius: 5px;
 }
